# config_learn

./: CMakeLists.txt  README.md  a.out  test  test.c
3party/cJSON/: cJSON.c  cJSONx.c
config/: default_config.json
config_file_dir/config/: abc.json  config.json
include/: CMakeLists.txt  config_manage.h  get_config.h  mylib.h
include/cJSON/: cJSON.h
include/config-manage/src/: config_manage.c
include/config_manage/include/: config_manage.h
include/config_manage/src/: config_manage.c
include/observer/include/: observer.h
include/observer/src/: observer.c
lib/: CMakeLists.txt  config_fun.c  libzlog.so.1.2  module1.c  module2.c
lighttpd/config/: Makefile  Makefile.in  lighttpd.annotated.conf  modules.conf
lighttpd/config/conf.d/: Makefile  Makefile.in  fastcgi.conf
lighttpd/config/vhosts.d/: Makefile  Makefile.in
lighttpd/www/: test.html
src/: CMakeLists.txt  config_fun.c  main.c  zlog.conf
src/fcgi/: fcgi_main.c  fcgi_main.h
tools/: cgi-fcgi
